--- a/pages/18731.html
+++ b/pages/18731.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      complex analysis in nLab
+      Laplace transform in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      complex analysis
+      Laplace transform
   </h1>
 
 
@@ -308,177 +308,53 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <div class='rightHandSide'>
-<div class='toc clickDown' tabindex='0'>
-<h3 id='context'>Context</h3>
-
-<h4 id='complex_geometry'>Complex geometry</h4>
-
-<div class='hide'>
-<p><a class='existingWikiWord' href='/nlab/show/geometry'>geometry</a>, <a class='existingWikiWord' href='/nlab/show/complex+number'>complex numbers</a>, <a class='existingWikiWord' href='/nlab/show/complex+line'>complex line</a></p>
-
-<p><strong><a class='existingWikiWord' href='/nlab/show/complex+geometry'>complex geometry</a></strong></p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/complex+manifold'>complex manifold</a>, <a class='existingWikiWord' href='/nlab/show/complex+structure'>complex structure</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/complex+analytic+space'>complex analytic space</a></p>
-</li>
-</ul>
-
-<h3 id='variants'>Variants</h3>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/generalized+complex+geometry'>generalized complex geometry</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/complex+supermanifold'>complex supermanifold</a></p>
-</li>
-</ul>
-
-<h3 id='structures'>Structures</h3>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/Dolbeault+complex'>Dolbeault complex</a></li>
-</ul>
-
-<h3 id='examples'>Examples</h3>
-
-<ul>
-<li>
-<p><math class='maruku-mathml' display='inline' id='mathml_7846ee28917f27a0f93d2f153828cd29436199f9_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>dim</mi><mo>=</mo><mn>1</mn></mrow><annotation encoding='application/x-tex'>dim = 1</annotation></semantics></math>: <a class='existingWikiWord' href='/nlab/show/Riemann+surface'>Riemann surface</a>, <a class='existingWikiWord' href='/nlab/show/super+Riemann+surface'>super Riemann surface</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Calabi-Yau+variety'>Calabi-Yau manifold</a></p>
-
-<ul>
-<li><math class='maruku-mathml' display='inline' id='mathml_7846ee28917f27a0f93d2f153828cd29436199f9_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>dim</mi><mo>=</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>dim = 2</annotation></semantics></math>: <a class='existingWikiWord' href='/nlab/show/K3+surface'>K3 surface</a></li>
-</ul>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/generalized+Calabi-Yau+manifold'>generalized Calabi-Yau manifold</a></p>
-</li>
-</ul>
-</div>
-
-<h4 id='analytic_geometry'>Analytic geometry</h4>
-
-<div class='hide'>
-<p><strong><a class='existingWikiWord' href='/nlab/show/analytic+geometry'>analytic geometry</a> (<a class='existingWikiWord' href='/nlab/show/complex+geometry'>complex</a>, <a class='existingWikiWord' href='/nlab/show/rigid+analytic+geometry'>rigid</a>, <a class='existingWikiWord' href='/nlab/show/Global+analytic+geometry'>global</a>)</strong></p>
-
-<p><a class='existingWikiWord' href='/nlab/show/geometry'>geometry</a>+<a class='existingWikiWord' href='/nlab/show/analysis'>analysis</a>/<a class='existingWikiWord' href='/nlab/show/analytic+number+theory'>analytic number theory</a></p>
-
-<h2 id='basic_concepts'>Basic concepts</h2>
-
-<p><a class='existingWikiWord' href='/nlab/show/analytic+function'>analytic function</a></p>
-
-<p><a class='existingWikiWord' href='/nlab/show/analytic+space'>analytic space</a>, <a class='existingWikiWord' href='/nlab/show/analytic+variety'>analytic variety</a>, <a class='existingWikiWord' href='/nlab/show/Berkovich+space'>Berkovich space</a></p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/polydisc'>polydisc</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/affinoid+algebra'>affinoid algebra</a>, <a class='existingWikiWord' href='/nlab/show/analytic+spectrum'>analytic spectrum</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/complex+analytic+%E2%88%9E-groupoid'>analytic ∞-groupoid</a></p>
-</li>
-</ul>
-
-<p><a class='existingWikiWord' href='/nlab/show/analytification'>analytification</a></p>
-
-<h2 id='theorems'>Theorems</h2>
-
-<p><a class='existingWikiWord' href='/nlab/show/GAGA'>GAGA</a></p>
-</div>
-</div>
-</div>
-
-<h1 id='complex_analysis'>Complex analysis</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_entries'>Related entries</a></li><li><a href='#references'>References</a></li></ul></div>
+    <h1 id='contents'>Contents</h1>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p><strong>Complex analysis</strong> is the mathematical <a class='existingWikiWord' href='/nlab/show/analysis'>analysis</a> of <a class='existingWikiWord' href='/nlab/show/complex+number'>complex</a>-valued <a class='existingWikiWord' href='/nlab/show/analytic+function'>analytic</a> (typically) functions of a complex variable, of several complex variables, or on a complex <a class='existingWikiWord' href='/nlab/show/analytic+manifold'>analytic manifold</a>.</p>
+<p>The <em>Laplace transform</em> of a <a class='existingWikiWord' href='/nlab/show/function'>function</a> <math class='maruku-mathml' display='inline' id='mathml_d418377b49c6ea66f22dadbdbecfd38e50e02caf_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi></mrow><annotation encoding='application/x-tex'>f</annotation></semantics></math> on a suitable <a class='existingWikiWord' href='/nlab/show/affine+space'>affine space</a> is the result of an <a class='existingWikiWord' href='/nlab/show/integral'>integration</a> of the form</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_d418377b49c6ea66f22dadbdbecfd38e50e02caf_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mover><mi>f</mi><mo stretchy='false'>^</mo></mover><mo stretchy='false'>(</mo><mi>a</mi><mo stretchy='false'>)</mo><mo>≔</mo><mo>∫</mo><mi>f</mi><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo><msup><mi>e</mi> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mi>x</mi><mi>a</mi></mrow></msup><mspace width='thinmathspace'></mspace><mi>d</mi><mi>x</mi><mspace width='thinmathspace'></mspace><mo>,</mo></mrow><annotation encoding='application/x-tex'>
+  \hat f(a) \coloneqq \int f(x) e^{- x a} \, d x
+  \,,
 
-<p>Since a complex number can be understood as a pair of <a class='existingWikiWord' href='/nlab/show/real+number'>real numbers</a>, this would naively reduce to analysis of pairs of functions of an even number of real variables; however by complex analysis we mean mathematical analysis which takes into account limits and derivative which do not depend on the real line in a complex plane on which we approach a point. This leads to the notions of <a class='existingWikiWord' href='/nlab/show/holomorphic+function'>holomorphic function</a>, <a class='existingWikiWord' href='/nlab/show/meromorphic+function'>meromorphic function</a>, etc. which are the main subject of complex analysis. However, there are connections to such real-analytic notions as <a class='existingWikiWord' href='/nlab/show/harmonic+analysis'>harmonic analysis</a>, and the geometric approach to complex analysis builds on the theory of <a class='existingWikiWord' href='/nlab/show/smooth+map'>smooth functions</a>.</p>
+</annotation></semantics></math></div>
+<p>when defined.</p>
 
-<h2 id='related_entries'>Related entries</h2>
+<p>For <a class='existingWikiWord' href='/nlab/show/imaginary+number'>imaginary</a> numbers <math class='maruku-mathml' display='inline' id='mathml_d418377b49c6ea66f22dadbdbecfd38e50e02caf_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>a</mi></mrow><annotation encoding='application/x-tex'>a</annotation></semantics></math>, this is the <em><a class='existingWikiWord' href='/nlab/show/Fourier+transform'>Fourier transform</a></em>. If <math class='maruku-mathml' display='inline' id='mathml_d418377b49c6ea66f22dadbdbecfd38e50e02caf_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>a</mi></mrow><annotation encoding='application/x-tex'>a</annotation></semantics></math> is allowed to be a <a class='existingWikiWord' href='/nlab/show/complex+number'>complex number</a>, this is also called the <em><a class='existingWikiWord' href='/nlab/show/Fourier-Laplace+transform'>Fourier-Laplace transform</a></em>.</p>
+
+<h2 id='related_concepts'>Related concepts</h2>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Weierstrass+preparation+theorem'>Weierstrass preparation theorem</a>, <a class='existingWikiWord' href='/nlab/show/several+complex+variables'>several complex variables</a>, <a class='existingWikiWord' href='/nlab/show/spectral+theory'>spectral theory</a>, <a class='existingWikiWord' href='/nlab/show/Riemann+surface'>Riemann surface</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/Mellin+transform'>Mellin transform</a></li>
 </ul>
 
 <h2 id='references'>References</h2>
 
 <ul>
-<li>
-<p>Wikipedia (English): <a href='http://en.wikipedia.org/wiki/Complex_analysis'>Complex analysis</a>, <a href='http://en.wikipedia.org/wiki/Several_complex_variables'>Several complex variables</a></p>
-</li>
-
-<li>
-<p>John B. Conway, <em>Functions of one complex variable</em>, Springer 1978; <em>Functions of one complex variable II</em>, GTM 159</p>
-</li>
-
-<li>
-<p>Lars V. Ahlfors, <em>Complex analysis</em>, McGraw-Hill, 1966.</p>
-</li>
-
-<li>
-<p>Raghavan Narasimhan, <em>Complex analysis in one variable</em>, Birkhäuser, 1985.</p>
-</li>
-
-<li>
-<p>Lars Hörmander, <em>An introduction to complex analysis in several variables</em>, North-Holland</p>
-</li>
-
-<li>
-<p>Steven G. Krantz, <em>Geometric function theory: explorations in complex analysis</em>, Birkhäuser</p>
-</li>
-
-<li>
-<p>Robert C. Gunning, Hugo Rossi, <em>Analytic functions of several complex variables</em>, AMS Chelsea Publishing</p>
-</li>
-
-<li>
-<p>Douglas N. Arnold, <em>Complex analysis</em>, lecture notes, <a href='http://www.ima.umn.edu/~arnold/502.s97/complex.pdf'>pdf</a></p>
-</li>
-
-<li>
-<p><span class='newWikiWord'>Elias M. Stein<a href='/nlab/new/Elias+Stein'>?</a></span>, Rami Shakarchi, <em>Complex analysis</em>, Princeton University Press 2003, 2012</p>
-</li>
+<li>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Laplace_transform'>Laplace transform</a></em></li>
 </ul>
 
-<p><div class='property'> category: <a class='category_link' href='/nlab/list/analysis'>analysis</a></div> 
+<p>
 </p>
 </div>
 
 <div class="revisedby">
-  Revised on October 31, 2017 05:07:31 
+  Created on October 31, 2017 05:27:23 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (94.220.69.162)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/complex+analysis" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/complex+analysis/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/complex+analysis" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/complex+analysis" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Laplace+transform" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/complex+analysis" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Laplace+transform" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/complex+analysis" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Laplace+transform" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/complex+analysis" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Laplace+transform" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
