--- a/pages/3003.html
+++ b/pages/3003.html
@@ -309,45 +309,95 @@ margin-left: 0em;
 
 <div id="revision">
     <h1 id='conical_spaces'>Conical spaces</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#relation_to_vector_spaces'>Relation to vector spaces</a></li><li><a href='#extended_conical_spaces'>Extended conical spaces</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#definition'>Definition</a><ul><li><a href='#conical_sets'>Conical sets</a></li><li><a href='#extended_conical_sets'>Extended conical sets</a></li></ul></li><li><a href='#examples'>Examples</a><ul><li><a href='#general'>General</a></li><li><a href='#relation_to_vector_spaces'>Relation to vector spaces</a></li></ul></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>A <strong>conical space</strong> is a set equipped with a notion of taking <a class='existingWikiWord' href='/nlab/show/real+number'>real</a>-<a class='existingWikiWord' href='/nlab/show/linear+combination'>linear combination</a>s with nonnegative coefficients of its elements. We may tersely define it as a <a class='existingWikiWord' href='/nlab/show/module'>module</a> of the <a class='existingWikiWord' href='/nlab/show/rig'>rig</a> <math class='maruku-mathml' display='inline' id='mathml_d0a37e55bfd5b90a9c6b361eaad0c48b72278ffd_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mo>+</mo></msup><mo>=</mo><mrow><mo stretchy='false'>[</mo><mrow><mn>0</mn><mo>,</mo><mn>∞</mn></mrow><mo stretchy='false'>[</mo></mrow></mrow><annotation encoding='application/x-tex'>\mathbb{R}^+ = {[{0,\infty}[}</annotation></semantics></math>: that is, the rig of nonnegative real numbers, with ordinary addition and multiplication as the rig operations.</p>
+<p>A <strong>conical space</strong> is a <a class='existingWikiWord' href='/nlab/show/set'>set</a> equipped with a notion of taking <a class='existingWikiWord' href='/nlab/show/real+number'>real</a>-<a class='existingWikiWord' href='/nlab/show/linear+combination'>linear combinations</a> with <a class='existingWikiWord' href='/nlab/show/positive+number'>nonnegative</a> <a class='existingWikiWord' href='/nlab/show/coefficient'>coefficients</a> of its elements.</p>
 
-<p>The <a class='existingWikiWord' href='/nlab/show/positive+cone'>positive cone</a> of any <a class='existingWikiWord' href='/nlab/show/ordered+group'>ordered</a> real <a class='existingWikiWord' href='/nlab/show/vector+space'>vector space</a> is a conical space.</p>
+<p>Conical spaces appear prominently in <a class='existingWikiWord' href='/nlab/show/microlocal+analysis'>microlocal analysis</a>, where <a class='existingWikiWord' href='/nlab/show/wavefront+set'>wave front sets</a> of <a class='existingWikiWord' href='/nlab/show/distribution'>distributions</a> are <a class='existingWikiWord' href='/nlab/show/disjoint+union'>disjoint unions</a> of (open-)conical spaces; also in <a class='existingWikiWord' href='/nlab/show/Lorentzian+geometry'>Lorentzian geometry</a> in the guise of open <a class='existingWikiWord' href='/nlab/show/future'>past</a>/<a class='existingWikiWord' href='/nlab/show/future'>future</a> <a class='existingWikiWord' href='/nlab/show/causal+cone'>causal cones</a> and <a class='existingWikiWord' href='/nlab/show/light+cone'>light cones</a>.</p>
 
-<h2 id='relation_to_vector_spaces'>Relation to vector spaces</h2>
+<h2 id='definition'>Definition</h2>
 
-<p>Any rig homomorphism <math class='maruku-mathml' display='inline' id='mathml_d0a37e55bfd5b90a9c6b361eaad0c48b72278ffd_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi><mo>→</mo><mi>B</mi></mrow><annotation encoding='application/x-tex'>A \to B</annotation></semantics></math> gives a ‘restriction of scalars’ functor <math class='maruku-mathml' display='inline' id='mathml_d0a37e55bfd5b90a9c6b361eaad0c48b72278ffd_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi><mo>:</mo><mi>B</mi><mi>Mod</mi><mo>→</mo><mi>A</mi><mi>Mod</mi></mrow><annotation encoding='application/x-tex'>R: B Mod \to A Mod</annotation></semantics></math> and ‘extension of scalars’ functor <math class='maruku-mathml' display='inline' id='mathml_d0a37e55bfd5b90a9c6b361eaad0c48b72278ffd_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>L</mi><mo>:</mo><mi>A</mi><mi>Mod</mi><mo>→</mo><mi>B</mi><mi>Mod</mi></mrow><annotation encoding='application/x-tex'>L: A Mod \to B Mod</annotation></semantics></math>. In particular, the rig homomorphism</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_d0a37e55bfd5b90a9c6b361eaad0c48b72278ffd_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mo>+</mo></msup><mo>↪</mo><mi>ℝ</mi></mrow><annotation encoding='application/x-tex'>\mathbb{R}^+ \hookrightarrow \mathbb{R}</annotation></semantics></math></div>
-<p>produces a pair of <a class='existingWikiWord' href='/nlab/show/adjoint+functor'>adjoint functors</a> between the category of <math class='maruku-mathml' display='inline' id='mathml_d0a37e55bfd5b90a9c6b361eaad0c48b72278ffd_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℝ</mi></mrow><annotation encoding='application/x-tex'>\mathbb{R}</annotation></semantics></math>-modules (that is, real <a class='existingWikiWord' href='/nlab/show/vector+space'>vector spaces</a>) and <math class='maruku-mathml' display='inline' id='mathml_d0a37e55bfd5b90a9c6b361eaad0c48b72278ffd_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mo>+</mo></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^+</annotation></semantics></math>-modules (that is, conical spaces).</p>
+<h3 id='conical_sets'>Conical sets</h3>
 
-<p>In simple English: any real vector space has an underlying conical space, and any conical space freely generates a real vector space.</p>
+<p>A <em>conical set</em> is a <a class='existingWikiWord' href='/nlab/show/module'>module</a> of the <a class='existingWikiWord' href='/nlab/show/rig'>rig</a> <math class='maruku-mathml' display='inline' id='mathml_01a5c53ad13024e18f7825d7f4f1677d876f5c03_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mo>+</mo></msup><mo>=</mo><mrow><mo stretchy='false'>[</mo><mrow><mn>0</mn><mo>,</mo><mn>∞</mn></mrow><mo stretchy='false'>[</mo></mrow></mrow><annotation encoding='application/x-tex'>\mathbb{R}^+ = {[{0,\infty}[}</annotation></semantics></math>: that is, the rig of <a class='existingWikiWord' href='/nlab/show/positive+number'>nonnegative</a> <a class='existingWikiWord' href='/nlab/show/real+number'>real numbers</a>, with ordinary <a class='existingWikiWord' href='/nlab/show/sum'>addition</a> and <a class='existingWikiWord' href='/nlab/show/multiplication'>multiplication</a> as the rig operations.</p>
 
-<h2 id='extended_conical_spaces'>Extended conical spaces</h2>
+<p>Similarly one may consider “open conical sets” which are <a class='existingWikiWord' href='/nlab/show/module'>modules</a> over the <a class='existingWikiWord' href='/nlab/show/rig'>rig</a> of <a class='existingWikiWord' href='/nlab/show/positive+number'>positive</a> <a class='existingWikiWord' href='/nlab/show/real+number'>real numbers</a>.</p>
 
-<p>An <strong>extended conical space</strong> is a module over the rig <math class='maruku-mathml' display='inline' id='mathml_d0a37e55bfd5b90a9c6b361eaad0c48b72278ffd_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mover><mi>ℝ</mi><mo stretchy='false'>¯</mo></mover> <mo>+</mo></msup><mo>=</mo><mo stretchy='false'>[</mo><mn>0</mn><mo>,</mo><mn>∞</mn><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>\bar{\mathbb{R}}^+ = [0,\infty]</annotation></semantics></math> of nonnegative <a class='existingWikiWord' href='/nlab/show/extended+real+number'>extended real numbers</a>, with <math class='maruku-mathml' display='inline' id='mathml_d0a37e55bfd5b90a9c6b361eaad0c48b72278ffd_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>0</mn><mo>⋅</mo><mn>∞</mn><mo>≔</mo><mn>0</mn></mrow><annotation encoding='application/x-tex'>0 \cdot \infty \coloneqq 0</annotation></semantics></math>. For purposes of <a class='existingWikiWord' href='/nlab/show/constructive+mathematics'>constructive mathematics</a>, one should take <math class='maruku-mathml' display='inline' id='mathml_d0a37e55bfd5b90a9c6b361eaad0c48b72278ffd_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mover><mi>ℝ</mi><mo stretchy='false'>¯</mo></mover> <mo>+</mo></msup></mrow><annotation encoding='application/x-tex'>\bar{\mathbb{R}}^+</annotation></semantics></math> to be the space of nonnegative <a class='existingWikiWord' href='/nlab/show/one-sided+real+number'>lower real numbers</a>.</p>
+<h3 id='extended_conical_sets'>Extended conical sets</h3>
 
-<p>Since we have a rig homomorphism <math class='maruku-mathml' display='inline' id='mathml_d0a37e55bfd5b90a9c6b361eaad0c48b72278ffd_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mo>+</mo></msup><mo>↪</mo><msup><mover><mi>ℝ</mi><mo stretchy='false'>¯</mo></mover> <mo>+</mo></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^+ \hookrightarrow \bar{\mathbb{R}}^+</annotation></semantics></math>, every extended conical space has an underlying conical space, and any conical space freely generates an extended conical space. However, there is no direct relationship between vector spaces and extended conical spaces.</p>
+<p>An <em>extended conical space</em> is a <a class='existingWikiWord' href='/nlab/show/module'>module</a> over the <a class='existingWikiWord' href='/nlab/show/rig'>rig</a> <math class='maruku-mathml' display='inline' id='mathml_01a5c53ad13024e18f7825d7f4f1677d876f5c03_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mover><mi>ℝ</mi><mo stretchy='false'>¯</mo></mover> <mo>+</mo></msup><mo>=</mo><mo stretchy='false'>[</mo><mn>0</mn><mo>,</mo><mn>∞</mn><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>\bar{\mathbb{R}}^+ = [0,\infty]</annotation></semantics></math> of <a class='existingWikiWord' href='/nlab/show/positive+number'>nonnegative</a> <a class='existingWikiWord' href='/nlab/show/extended+real+number'>extended real numbers</a>, with <math class='maruku-mathml' display='inline' id='mathml_01a5c53ad13024e18f7825d7f4f1677d876f5c03_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>0</mn><mo>⋅</mo><mn>∞</mn><mo>≔</mo><mn>0</mn></mrow><annotation encoding='application/x-tex'>0 \cdot \infty \coloneqq 0</annotation></semantics></math>.</p>
 
-<p>That said, the <a class='existingWikiWord' href='/nlab/show/positive+cone'>extended positive cone</a> of any <a class='existingWikiWord' href='/nlab/show/ordered+group'>ordered</a> real <a class='existingWikiWord' href='/nlab/show/vector+space'>vector space</a> is an extended conical space.</p>
+<p>For purposes of <a class='existingWikiWord' href='/nlab/show/constructive+mathematics'>constructive mathematics</a>, one should take <math class='maruku-mathml' display='inline' id='mathml_01a5c53ad13024e18f7825d7f4f1677d876f5c03_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mover><mi>ℝ</mi><mo stretchy='false'>¯</mo></mover> <mo>+</mo></msup></mrow><annotation encoding='application/x-tex'>\bar{\mathbb{R}}^+</annotation></semantics></math> to be the space of nonnegative <a class='existingWikiWord' href='/nlab/show/one-sided+real+number'>lower real numbers</a>.</p>
+
+<p>Since we have a <a class='existingWikiWord' href='/nlab/show/rig'>rig</a> <a class='existingWikiWord' href='/nlab/show/homomorphism'>homomorphism</a> <math class='maruku-mathml' display='inline' id='mathml_01a5c53ad13024e18f7825d7f4f1677d876f5c03_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mo>+</mo></msup><mo>↪</mo><msup><mover><mi>ℝ</mi><mo stretchy='false'>¯</mo></mover> <mo>+</mo></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^+ \hookrightarrow \bar{\mathbb{R}}^+</annotation></semantics></math>, every extended conical space has an underlying conical space, and any conical space <a class='existingWikiWord' href='/nlab/show/free+functor'>freely generates</a> an extended conical space. However, there is no direct relationship between <a class='existingWikiWord' href='/nlab/show/vector+space'>vector spaces</a> and extended conical spaces.</p>
+
+<h2 id='examples'>Examples</h2>
+
+<h3 id='general'>General</h3>
+
+<p>The <a class='existingWikiWord' href='/nlab/show/positive+cone'>extended positive cone</a> of any <a class='existingWikiWord' href='/nlab/show/ordered+group'>ordered</a> real <a class='existingWikiWord' href='/nlab/show/vector+space'>vector space</a> is an extended conical space.</p>
+
+<ul>
+<li>The <a class='existingWikiWord' href='/nlab/show/positive+cone'>positive cone</a> of any <a class='existingWikiWord' href='/nlab/show/ordered+group'>ordered</a> real <a class='existingWikiWord' href='/nlab/show/vector+space'>vector space</a> is a conical space.</li>
+</ul>
+
+<h3 id='relation_to_vector_spaces'>Relation to vector spaces</h3>
+
+<p>Any <a class='existingWikiWord' href='/nlab/show/rig'>rig</a> <a class='existingWikiWord' href='/nlab/show/homomorphism'>homomorphism</a> <math class='maruku-mathml' display='inline' id='mathml_01a5c53ad13024e18f7825d7f4f1677d876f5c03_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi><mo>→</mo><mi>B</mi></mrow><annotation encoding='application/x-tex'>A \to B</annotation></semantics></math> gives a ‘<a class='existingWikiWord' href='/nlab/show/restriction+of+scalars'>restriction of scalars</a>’ <a class='existingWikiWord' href='/nlab/show/functor'>functor</a> <math class='maruku-mathml' display='inline' id='mathml_01a5c53ad13024e18f7825d7f4f1677d876f5c03_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi><mo lspace='verythinmathspace'>:</mo><mi>B</mi><mi>Mod</mi><mo>→</mo><mi>A</mi><mi>Mod</mi></mrow><annotation encoding='application/x-tex'>R\colon B Mod \to A Mod</annotation></semantics></math> and ‘<a class='existingWikiWord' href='/nlab/show/extension+of+scalars'>extension of scalars</a>’ <a class='existingWikiWord' href='/nlab/show/functor'>functor</a> <math class='maruku-mathml' display='inline' id='mathml_01a5c53ad13024e18f7825d7f4f1677d876f5c03_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>L</mi><mo lspace='verythinmathspace'>:</mo><mi>A</mi><mi>Mod</mi><mo>→</mo><mi>B</mi><mi>Mod</mi></mrow><annotation encoding='application/x-tex'>L \colon A Mod \to B Mod</annotation></semantics></math>. In particular, the rig homomorphism</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_01a5c53ad13024e18f7825d7f4f1677d876f5c03_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mo>+</mo></msup><mo>↪</mo><mi>ℝ</mi></mrow><annotation encoding='application/x-tex'>
+  \mathbb{R}^+ \hookrightarrow \mathbb{R}
+
+</annotation></semantics></math></div>
+<p>produces a pair of <a class='existingWikiWord' href='/nlab/show/adjoint+functor'>adjoint functors</a> between the <a class='existingWikiWord' href='/nlab/show/Mod'>category of modules</a> over <math class='maruku-mathml' display='inline' id='mathml_01a5c53ad13024e18f7825d7f4f1677d876f5c03_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℝ</mi></mrow><annotation encoding='application/x-tex'>\mathbb{R}</annotation></semantics></math> (that is, <a class='existingWikiWord' href='/nlab/show/real+vector+space'>real vector spaces</a>) and the <a class='existingWikiWord' href='/nlab/show/Mod'>category of modules</a> over <math class='maruku-mathml' display='inline' id='mathml_01a5c53ad13024e18f7825d7f4f1677d876f5c03_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mo>+</mo></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^+</annotation></semantics></math> (that is, conical spaces).</p>
+
+<p>In simple English: any real vector space has an <a class='existingWikiWord' href='/nlab/show/forgetful+functor'>underlying</a> conical space, and any conical space <a class='existingWikiWord' href='/nlab/show/free+functor'>freely generates</a> a real vector space.</p>
+
+<h2 id='related_concepts'>Related concepts</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/affine+space'>affine space</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/projective+space'>projective space</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/cone+%28Riemannian+geometry%29'>conical singularity</a></p>
+</li>
+</ul>
+
+<h2 id='references'>References</h2>
+
+<p>See also</p>
+
+<ul>
+<li>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Conical_combination'>Conical combination</a></em></li>
+</ul>
+
+<p>
+</p>
 
 <p>
  
- 
+</p>
+
+<p>
  
 </p>
 </div>
 
 <div class="revisedby">
-  Revised on August  8, 2012 07:39:19 
-  by <a class="existingWikiWord" href="/nlab/show/Toby+Bartels">Toby Bartels</a>
-  (98.16.182.220)
+  Revised on October 31, 2017 09:26:24 
+  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
+  (94.220.69.162)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/conical+space" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/conical+space/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/conical+space" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/conical+space" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/conical+space" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/conical+space/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/conical+space" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/conical+space" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
